--- a/css/style.scss
+++ b/css/style.scss
@@ -20,27 +20,95 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
 }
 .container {
   max-width: 1440px;
   margin: 0 auto;
 }
+.header-container {
+  min-height: 90vh;
+}
+.header-title {
+  height: 60vmin;
+  left: 50%;
+  top: 40%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  width: 60vmin;
+  & > div {
+    height: 50%;
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+  }
+  & > div.text-top {
+    border-bottom: 1vmin solid rgb(255, 43, 43);
+    top: 0;
+  }
+  & > div.text-bottom {
+    bottom: 0;
+  } 
+  & > div div {
+    font-size: 6vmin;
+    padding: 10px 0;
+    position: absolute;
+  }
+  & > div.text-top div {
+    animation: showTopText 1s;
+    animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+    bottom: 0;
+    transform: translate(0, 100%);
+  }
+  & > div.text-bottom div {
+    animation: showBottomText 0.5s;
+    animation-delay: 1.75s;
+    animation-fill-mode: forwards;
+    top: 0;
+    transform: translate(0, -100%);
+  }
+}
+.text-top__friend {
+  color: rgb(255, 43, 43);;
+  transition: 1s;
+  &:hover {
+    color: rgb(74, 74, 189);
+  }
+}
+@keyframes showTopText {
+  0% { transform: translate3d(0, 100%, 0); }
+  40%, 60% { transform: translate3d(0, 50%, 0); }
+  100% { transform: translate3d(0, 0, 0); }
+}
+
+@keyframes showBottomText {
+  0% { transform: translate3d(0, -100%, 0); }
+  100% { transform: translate3d(0, 0, 0); }
+}
+
 .nav {
-  background: rgba($color: #ffffff, $alpha: 0.5);
-  padding: 10px;
+  position: sticky;
+  top: 0;
+  background: rgba($color: #ffffff, $alpha: 0.7);
+  padding: 10px 0;
   &-list {
+    padding: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     &__link {
-      color: white;
-      background: rgba($color: #000000, $alpha: 0.3);
-      border-radius: 30px;
+      font-weight: 700;
+      color: black;
+      background: #e0e0e0;
+      border-radius: 40px;
       transition: 0.5s;
-      padding: 15px 15px;
+      padding: 3vh 3vw;
       &:hover {
-        color: black;
-        background: blue;
+        color: #2e6ec7;
+        background: rgb(236, 236, 236);
       }
     }
   }
@@ -48,7 +116,82 @@ body {
 .main-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
 .section {
+  color: white;
+  border-radius: 30px;
+  width: 45%;
+  margin: 10px 0;
+}
+.main-summary {
+  background: #2e6ec7;
+  text-align: center;
+  line-height: 2;
+  transition: 0.5s;
+  
+  animation-name: circle-to-square;
+  animation-duration: 3s;
+  animation-direction: alternate;
+  animation-timing-function: ease-in ;
+  animation-fill-mode: forwards;
+
+  &__title {
+    padding: 20px 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  p {
+    padding: 0 30px 10px;
+  }
+  &:hover {
+    background: #3b84f3;
+  }
+}
+.logo {
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+}
+
+// @keyframes circle-to-square {
+//   from {
+//     height: 100px;
+//     background-color: rgb(255, 101, 101);
+//   }
+//   50% {
+//     height: 300px;
+//     background-color: #7F6EDB;
+//   }
+//   to {
+//     height: 550px;
+//     background-color: #2e6ec7;
+//   }
+// }
+
+.main-skills {
+  background: red;
+  text-align: center;
+  &__skills {
+    display: flex;
+    flex-direction: row;
+  }
+}
+.main-skills__hard-skills {
   width: 50%;
+  & li {
+    padding: 15px 0;
+  }
+}
+.main-skills__soft-skills {
+  width: 50%;
+  & li {
+    padding: 15px 0;
+  }
+}
+.html::before {
+  content: '';
+
 }
