--- a/css/style.scss
+++ b/css/style.scss
@@ -23,18 +23,19 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
+  background:rgb(248, 248, 248);
 }
 .container {
   max-width: 1440px;
   margin: 0 auto;
 }
 .header-container {
-  min-height: 90vh;
+  min-height: 50vh;
 }
 .header-title {
   height: 60vmin;
   left: 50%;
-  top: 40%;
+  top: 30%;
   position: absolute;
   transform: translate(-50%, -50%);
   width: 60vmin;
@@ -88,54 +89,79 @@ body {
   0% { transform: translate3d(0, -100%, 0); }
   100% { transform: translate3d(0, 0, 0); }
 }
-
+.section-title {
+  text-transform: uppercase;
+}
 .nav {
   position: sticky;
   top: 0;
   background: rgba($color: #ffffff, $alpha: 0.7);
-  padding: 10px 0;
+  padding: 1.5vh 0;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   &-list {
     padding: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
+
     &__link {
       font-weight: 700;
       color: black;
       background: #e0e0e0;
       border-radius: 40px;
-      transition: 0.5s;
+      transition: 0.3s;
       padding: 3vh 3vw;
-      &:hover {
-        color: #2e6ec7;
-        background: rgb(236, 236, 236);
-      }
+      border: 2px solid transparent;
     }
   }
+}
+.summary {
+  &:hover  {
+    color: #2e6ec7;
+    background: rgb(236, 236, 236);
+  }
+  &:active {
+    border: 2px solid #2e6ec7;
+  }  
+}
+.skills {
+  &:hover {
+    color: rgb(255, 43, 43);
+    background: rgb(236, 236, 236);
+  }
+  &:active {
+    border: 2px solid rgb(255, 43, 43);
+  }  
 }
 .main-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 50px 0;
 }
 .section {
   color: white;
   border-radius: 30px;
-  width: 45%;
+  width: 48%;
   margin: 10px 0;
+}
+@media (max-width: 768px) {
+  .section {
+    width: 100%;
+  }
 }
 .main-summary {
   background: #2e6ec7;
   text-align: center;
   line-height: 2;
   transition: 0.5s;
-  
-  animation-name: circle-to-square;
-  animation-duration: 3s;
-  animation-direction: alternate;
-  animation-timing-function: ease-in ;
-  animation-fill-mode: forwards;
-
+  // animation-name: circle-to-square;
+  // animation-duration: 3s;
+  // animation-direction: alternate;
+  // animation-timing-function: ease-in ;
+  // animation-fill-mode: forwards;
   &__title {
     padding: 20px 20px;
     display: flex;
@@ -148,10 +174,12 @@ body {
   }
   &:hover {
     background: #3b84f3;
+    box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.5);
   }
 }
 .logo {
   border-radius: 50%;
+  border: 3px solid white;  
   width: 200px;
   height: 200px;
 }
@@ -172,11 +200,16 @@ body {
 // }
 
 .main-skills {
-  background: red;
+  background: rgb(255, 43, 43);
   text-align: center;
+  transition: 0.5s;
   &__skills {
     display: flex;
     flex-direction: row;
+  }
+  &:hover {
+    background: rgb(253, 73, 73);
+    box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.5);
   }
 }
 .main-skills__hard-skills {
@@ -191,7 +224,107 @@ body {
     padding: 15px 0;
   }
 }
-.html::before {
+.main-skills__item::before {
   content: '';
+  display: inline-block;
+  margin-right: 5px;
+  width: 40px;
+  height: 40px;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: transform 0.5s;
+}
+.main-skills__item:hover {
+  animation:  shake 1.5s ease 0s normal none 1 running;
+  color: #2e6ec7;
+}
+@keyframes shake {
+  0% {
+      transform: rotateZ(0deg);
+  }
+  10% {
+      transform: rotateZ(-15deg);
+  }
+  20% {
+      transform: rotateZ(12deg);
+  }
+  30% {
+      transform: rotateZ(-10deg);
+  }
+  40% {
+      transform: rotateZ(7.5deg);
+  }
+  50% {
+      transform: rotateZ(-6deg);
+  }
+  60% {
+      transform: rotateZ(5deg);
+  }
+  70% {
+      transform: rotateZ(-4deg);
+  }
+  80% {
+      transform: rotateZ(3.75deg);
+  }
+  90% {
+      transform: rotateZ(-3deg);
+  }
+  100% {
+      transform: rotateZ(0deg);
+  }
+  }
 
+.html::before {
+  background-image: url(../assets/svg/html5-brands.svg);
+}
+.css::before {
+  background-image: url(../assets/svg/css3-alt-brands.svg);
+}
+.js::before {
+  background-image: url(../assets/svg/js-square-brands.svg);
+}
+.git::before {
+  background-image: url(../assets/svg/git-alt-brands.svg);
+}
+.figma::before {
+  background-image: url(../assets/svg/figma-brands.svg);
+}
+.communication::before {
+  background-image: url(../assets/svg/comments-solid.svg);
+}
+.stress-mang::before {
+  background-image: url(../assets/svg/balance-scale-solid.svg);
+}
+.decision-mk::before {
+  background-image: url(../assets/svg/user-clock-solid.svg);
+}
+.teamwork::before {
+  background-image: url(../assets/svg/handshake-regular.svg);
+}
+.critical-thk::before {
+  background-image: url(../assets/svg/brain-solid.svg);
+}
+
+.main-code {
+  background:rgb(74, 74, 189);
+  transition: 0.3s;
+  &:hover {
+    background: rgb(85, 85, 216);
+    box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.5);
+  }
+  &__title {
+    padding: 20px;
+    text-align: justify;
+  }
+  &__code-container {
+    background:rgba(0, 0, 0, 0.2);
+    border-radius: 30px;
+    transition: 1s;
+    &:hover {
+      background: rgba(0, 0, 0, 0.5);
+    }
+  }
+  & pre {
+    margin: 0;
+  }
 }
