--- a/css/style.scss
+++ b/css/style.scss
@@ -91,6 +91,7 @@ body {
 }
 .section-title {
   text-transform: uppercase;
+  text-align: center;
 }
 .nav {
   position: sticky;
@@ -137,14 +138,14 @@ body {
 .main-container {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: stretch;
   justify-content: space-between;
   padding: 50px 0;
 }
 .section {
   color: white;
   border-radius: 30px;
-  width: 48%;
+  width: 49%;
   margin: 10px 0;
 }
 @media (max-width: 768px) {
@@ -154,7 +155,7 @@ body {
 }
 .main-summary {
   background: #2e6ec7;
-  text-align: center;
+  text-align: justify;
   line-height: 2;
   transition: 0.5s;
   // animation-name: circle-to-square;
@@ -215,13 +216,19 @@ body {
 .main-skills__hard-skills {
   width: 50%;
   & li {
-    padding: 15px 0;
+    padding: 5px 0;
+  }
+  & ul {
+    padding: 0;
   }
 }
 .main-skills__soft-skills {
   width: 50%;
+  & ul {
+    padding: 0;
+  }
   & li {
-    padding: 15px 0;
+    padding: 5px 0;
   }
 }
 .main-skills__item::before {
@@ -306,14 +313,14 @@ body {
 }
 
 .main-code {
-  background:rgb(74, 74, 189);
+  background:rgb(137, 74, 189);
   transition: 0.3s;
   &:hover {
-    background: rgb(85, 85, 216);
+    background: rgb(135, 85, 216);
     box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.5);
   }
   &__title {
-    padding: 20px;
+    padding: 0 30px;
     text-align: justify;
   }
   &__code-container {
@@ -327,4 +334,33 @@ body {
   & pre {
     margin: 0;
   }
+}
+
+.main-education {
+  background: rgb(255, 179, 14);
+  &__list {
+    font-size: 24px;
+  }
+  &__item {
+    padding: 20px 0;
+  }
+}
+.main-education__item::before {
+  content: '';
+  display: inline-block;
+  margin-right: 5px;
+  width: 40px;
+  height: 40px;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: transform 0.5s;
+}
+.university::before {
+  background-image: url(../assets/svg/university-solid.svg);
+}
+.course-html::before {
+  background-image: url(../assets/svg/list-alt-solid.svg);
+}
+.course-rs::before {
+  background-image: url(../assets/svg/list-alt-regular.svg);
 }
