--- a/css/style.scss
+++ b/css/style.scss
@@ -135,6 +135,42 @@ body {
     border: 2px solid rgb(255, 43, 43);
   }  
 }
+.code {
+  &:hover {
+    color:rgb(137, 74, 189);
+    background: rgb(236, 236, 236);
+  }
+  &:active {
+    border: 2px solid rgb(137, 74, 189);
+  }  
+}
+.education {
+  &:hover {
+    color: rgb(255, 179, 14);
+    background: rgb(236, 236, 236);
+  }
+  &:active {
+    border: 2px solid rgb(255, 179, 14);
+  }  
+}
+.english {
+  &:hover {
+    color: rgb(27, 223, 27);
+    background: rgb(236, 236, 236);
+  }
+  &:active {
+    border: 2px solid rgb(27, 223, 27);
+  }  
+}
+.contacts {
+  &:hover {
+    color: rgb(14, 168, 196);
+    background: rgb(236, 236, 236);
+  }
+  &:active {
+    border: 2px solid rgb(14, 168, 196);
+  }  
+}
 .main-container {
   display: flex;
   flex-wrap: wrap;
@@ -363,4 +399,44 @@ body {
 }
 .course-rs::before {
   background-image: url(../assets/svg/list-alt-regular.svg);
+}
+.main-english {
+  background: rgb(27, 223, 27);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  &__logo {
+    font-size: 50px;
+    font-weight: 700;
+  }
+}
+.main-contacts {
+  background: rgb(14, 168, 196);
+  &__list {
+    display: flex;
+    flex-direction: row;
+  }
+}
+.fa {
+  margin: 0 10px;
+  padding: 20px;
+  width: 20px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-github {
+  background: #3B5998;
+  color: white;
+}
+.fa-envelope {
+  background: #3B5998;
+  color: white;
 }
