--- a/css/style.css
+++ b/css/style.css
@@ -597,6 +597,15 @@ body {
   background-image: url(../assets/svg/list-alt-regular.svg);
 }
 
+.project {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .main-english {
   background: #1bdf1b;
   display: -webkit-box;
@@ -620,6 +629,14 @@ body {
   background: #0ea8c4;
 }
 
+.main-contacts__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
 .main-contacts__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -632,8 +649,7 @@ body {
 
 .fa {
   margin: 0 10px;
-  padding: 20px;
-  width: 20px;
+  padding: 15px;
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
@@ -643,7 +659,11 @@ body {
   opacity: 0.7;
 }
 
-.fa-facebook {
+.fa-folder-open {
+  color: white;
+}
+
+.fa-telegram {
   background: #3B5998;
   color: white;
 }
@@ -656,5 +676,30 @@ body {
 .fa-envelope {
   background: #3B5998;
   color: white;
+}
+
+.footer-menu {
+  max-height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 30px;
+  -webkit-box-shadow: 0px -12px 24px 1px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px -12px 24px 1px rgba(0, 0, 0, 0.5);
+}
+
+.footer-menu__rs-link {
+  display: block;
+  height: 80px;
+  width: 150px;
 }
 /*# sourceMappingURL=style.css.map */
